syntax = "proto3";

package splitwiser.v1;

option go_package = "github.com/mmynk/splitwiser/pkg/proto;proto";

// Service for bill splitting operations
service SplitService {
  // Calculate split for a bill
  rpc CalculateSplit(CalculateSplitRequest) returns (CalculateSplitResponse);

  // Create a new bill
  rpc CreateBill(CreateBillRequest) returns (CreateBillResponse);

  // Get bill details
  rpc GetBill(GetBillRequest) returns (GetBillResponse);

  // Update an existing bill
  rpc UpdateBill(UpdateBillRequest) returns (UpdateBillResponse);
}

// Service for group management
service GroupService {
  // Create a new group
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);

  // Get group details
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse);

  // List all groups
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);

  // Update an existing group
  rpc UpdateGroup(UpdateGroupRequest) returns (UpdateGroupResponse);

  // Delete a group
  rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse);
}

// Request to calculate a split
message CalculateSplitRequest {
  repeated Item items = 1;
  double total = 2;        // Total bill amount including tax
  double subtotal = 3;     // Subtotal before tax
  repeated string participants = 4;
}

// Response with calculated split
message CalculateSplitResponse {
  map<string, PersonSplit> splits = 1;
  double tax_amount = 2;
  double subtotal = 3;
}

// Individual item on a bill
message Item {
  string description = 1;
  double amount = 2;
  repeated string participants = 3;  // Participant IDs/names who split this item
}

// Item with calculated amount for one person
message PersonItem {
  string description = 1;
  double amount = 2;  // This person's share of the item
}

// Split calculation for one person
message PersonSplit {
  double subtotal = 1;
  double tax = 2;
  double total = 3;
  repeated PersonItem items = 4;  // Items assigned to this person with their share
}

// Request to create a bill
message CreateBillRequest {
  string title = 1;
  repeated Item items = 2;
  double total = 3;
  double subtotal = 4;
  repeated string participants = 5;
  optional string group_id = 6;  // Optional - links bill to a group
}

message CreateBillResponse {
  string bill_id = 1;
  CalculateSplitResponse split = 2;
}

message GetBillRequest {
  string bill_id = 1;
}

message GetBillResponse {
  string bill_id = 1;
  string title = 2;
  repeated Item items = 3;
  double total = 4;
  double subtotal = 5;
  repeated string participants = 6;
  CalculateSplitResponse split = 7;
  int64 created_at = 8;
  optional string group_id = 9;  // Optional - links bill to a group
}

message UpdateBillRequest {
  string bill_id = 1;
  string title = 2;
  repeated Item items = 3;
  double total = 4;
  double subtotal = 5;
  repeated string participants = 6;
  optional string group_id = 7;  // Optional - links bill to a group
}

message UpdateBillResponse {
  string bill_id = 1;
  CalculateSplitResponse split = 2;
}

// Group represents a reusable participant list
message Group {
  string id = 1;
  string name = 2;
  repeated string members = 3;  // Member names (future: user IDs)
  int64 created_at = 4;
}

// Request to create a group
message CreateGroupRequest {
  string name = 1;
  repeated string members = 2;
}

message CreateGroupResponse {
  Group group = 1;
}

// Request to get a group
message GetGroupRequest {
  string group_id = 1;
}

message GetGroupResponse {
  Group group = 1;
}

// Request to list all groups
message ListGroupsRequest {}

message ListGroupsResponse {
  repeated Group groups = 1;
}

// Request to update a group
message UpdateGroupRequest {
  string group_id = 1;
  string name = 2;
  repeated string members = 3;
}

message UpdateGroupResponse {
  Group group = 1;
}

// Request to delete a group
message DeleteGroupRequest {
  string group_id = 1;
}

message DeleteGroupResponse {}
